# qrcode-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  MIGRATION-1.x-to-2.0.md  README.md  rustfmt.toml
.github/workflows/: Build.yml  audit.yml  docs.yml  rust-clippy.yml
benches/: encoding.rs  rendering.rs
crates/qrcode-compat/: Cargo.toml  README.md
crates/qrcode-compat/src/: lib.rs
crates/qrcode-compat/tests/: facade.rs
crates/qrcode-core/: Cargo.toml  README.md
crates/qrcode-core/src/: bits.rs  canvas.rs  cast.rs  ec.rs  lib.rs  mode.rs  optimize.rs  plugin.rs  traits.rs  types.rs  version.rs
crates/qrcode-decode/: Cargo.toml  README.md
crates/qrcode-decode/src/: lib.rs  rqrr.rs  sa_parse.rs
crates/qrcode-eps/: Cargo.toml  README.md
crates/qrcode-eps/src/: lib.rs
crates/qrcode-html/: Cargo.toml  README.md
crates/qrcode-html/src/: lib.rs
crates/qrcode-parse/: Cargo.toml  README.md
crates/qrcode-parse/src/: gs1.rs  lib.rs  vcard.rs  wifi.rs
crates/qrcode-pdf/: Cargo.toml  README.md
crates/qrcode-pdf/src/: lib.rs
crates/qrcode-pic/: Cargo.toml  README.md
crates/qrcode-pic/src/: lib.rs
crates/qrcode-render/: Cargo.toml  README.md
crates/qrcode-render/src/: ansi.rs  colors.rs  image.rs  lib.rs  plugin.rs  string.rs  unicode.rs
crates/qrcode-svg/: Cargo.toml  README.md
crates/qrcode-svg/src/: lib.rs
docs/: index.md
examples/: accessible_svg.rs  alt_text.rs  async_render.rs  batch_template.rs  cli_tool.rs  cmyk_print.rs  color_spaces.rs  const_version.rs  custom_colors.rs  decode_roundtrip.rs  encode_eci.rs  encode_eps.rs  encode_fnc1.rs  encode_gs1.rs  encode_html.rs  encode_image.rs  encode_kanji.rs  encode_pic.rs  encode_string.rs  encode_svg.rs  encode_unicode.rs  error_handling.rs  parse_gs1.rs  parse_vcard.rs  parse_wifi.rs  plugin_invert_modules.rs  plugin_plain_text.rs  stream_codes.rs  structured_append.rs  typed_encoding_mode.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: encode.rs  encode_with_version.rs  parse_payloads.rs  render_svg.rs  structured_append.rs
src/: bits.rs  canvas.rs  cast.rs  ec.rs  lib.rs  optimize.rs  structured_append.rs  types.rs
src/decode/: mod.rs  rqrr.rs  sa_parse.rs
src/parse/: gs1.rs  mod.rs  vcard.rs  wifi.rs
src/render/: ansi.rs  colors.rs  eps.rs  html.rs  image.rs  mod.rs  pdf.rs  pic.rs  string.rs  svg.rs  unicode.rs
tests/: boundary.rs  cli.rs  compat_1x.rs  core_abstraction.rs  decode_roundtrip.rs  differential.rs  proptest.rs  sa_roundtrip.rs  serde.rs  structured_append.rs
