[package]
name = "qrcode-rs"
description = "QR code encoder in Rust，Generate QR Code matrices and images in RAW, PNG and SVG formats."
license = "MIT OR Apache-2.0"
version = "0.1.5"
edition = "2021"
authors = ["houseme <housemecn@gmail.com>"]
repository = "https://github.com/houseme/qrcode-rs"
homepage = "https://houseme.github.io/qrcode-rs"
keywords = ["qrcode", "generate", "encoder", "image", "barcode"]
categories = ["encoding", "multimedia::images", "multimedia::encoding"]
readme = "README.md"
# Crate build related
exclude = ["tests/*", ".gitignore"]
rust-version = "1.67.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
debug = false

[dependencies]
image = { version = "0.25", default-features = false, optional = true }

[dev-dependencies]
image = "0.25"

[features]
default = ["image", "svg"]
bench = []
svg = []

[[bin]]
name = "qrencodes"

[[example]]
name = "encode_image"
required-features = ["image"]

[[example]]
name = "encode_string"

[[example]]
name = "encode_svg"
required-features = ["svg"]

[[example]]
name = "encode_unicode"