[package]
name = "qrcode-rs"
description = "QR code encoder in Rust，Generate QR Code matrices and images in RAW, PNG and SVG formats."
license = "MIT OR Apache-2.0"
version = "1.6.0"
edition = "2024"
authors = ["houseme <housemecn@gmail.com>"]
repository = "https://github.com/houseme/qrcode-rs"
homepage = "https://houseme.github.io/qrcode-rs"
documentation = "https://docs.rs/qrcode-rs/"
keywords = ["qrcode", "generate", "encoder", "image", "barcode"]
categories = ["encoding", "multimedia::images", "multimedia::encoding"]
readme = "README.md"
# Crate build related
exclude = ["tests/*", ".gitignore"]

[workspace]
members = [
    "crates/qrcode-core",
    "crates/qrcode-decode",
    "crates/qrcode-eps",
    "crates/qrcode-html",
    "crates/qrcode-pdf",
    "crates/qrcode-pic",
    "crates/qrcode-parse",
    "crates/qrcode-render",
    "crates/qrcode-svg",
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
debug = false

[dependencies]
image = { version = "0.25.10", default-features = false, optional = true }
clap = { version = "4.6", default-features = false, features = ["std", "derive", "help", "usage", "error-context", "suggestions"], optional = true }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
log = { version = "0.4", default-features = false, optional = true }
tokio = { version = "1", default-features = false, features = ["rt"], optional = true }
qrcode-core = { path = "crates/qrcode-core", version = "0.1.0", default-features = false }
qrcode-decode = { path = "crates/qrcode-decode", version = "0.1.0", default-features = false }
qrcode-eps = { path = "crates/qrcode-eps", version = "0.1.0", default-features = false, optional = true }
qrcode-html = { path = "crates/qrcode-html", version = "0.1.0", default-features = false, optional = true }
qrcode-pdf = { path = "crates/qrcode-pdf", version = "0.1.0", default-features = false, optional = true }
qrcode-pic = { path = "crates/qrcode-pic", version = "0.1.0", default-features = false, optional = true }
qrcode-parse = { path = "crates/qrcode-parse", version = "0.1.0", default-features = false }
qrcode-render = { path = "crates/qrcode-render", version = "0.1.0", default-features = false }
qrcode-svg = { path = "crates/qrcode-svg", version = "0.1.0", default-features = false, optional = true }

[dev-dependencies]
image = "0.25.10"
criterion = { version = "0.8", default-features = false }
serde_json = "1"

[features]
default = ["std", "image", "svg", "pic", "eps", "html", "pdf"]
# Links the `std` crate (enabled by default). Disable for `no_std` + `alloc`.
std = [
    "qrcode-core/std",
    "qrcode-decode/std",
    "qrcode-eps?/std",
    "qrcode-html?/std",
    "qrcode-pdf?/std",
    "qrcode-pic?/std",
    "qrcode-parse/std",
    "qrcode-render/std",
    "qrcode-svg?/std",
]
image = ["dep:image", "image/png", "std", "qrcode-decode/image", "qrcode-render/image"]
svg = ["dep:qrcode-svg"]
pic = ["dep:qrcode-pic"]
eps = ["dep:qrcode-eps"]
html = ["dep:qrcode-html"]
pdf = ["dep:qrcode-pdf"]
# Enables serde Serialize/Deserialize on the core types and a QrCodeData wrapper.
serde = ["dep:serde", "qrcode-core/serde"]
# Emits log::debug!/info! at the encode chokepoint (no behavior without a logger).
log = ["dep:log"]
# Enables async rendering helpers backed by tokio::task::spawn_blocking.
async = ["std", "dep:tokio"]
# Enables the `qrencodes` CLI binary (pulls in clap + all render backends).
# The library stays zero-dependency when this feature is off.
cli = ["dep:clap", "image", "svg", "eps", "pic", "html", "pdf"]
# Enables the `rqrr`-backed `RqrrDecoder` (decoding QR codes back to data).
# Pulls in `rqrr` + the `image` renderer (used to feed grayscale into the decoder).
decode-rqrr = ["image", "qrcode-decode/rqrr"]
# Exposes hidden benchmark-only hooks from qrcode-core. Not part of the stable
# public API surface.
bench-internals = ["qrcode-core/bench-internals"]

[[bin]]
name = "qrencodes"
required-features = ["cli"]

[[example]]
name = "encode_image"
required-features = ["image"]

[[example]]
name = "encode_string"

[[example]]
name = "encode_svg"
required-features = ["svg"]

[[example]]
name = "encode_unicode"

[[example]]
name = "encode_eps"
required-features = ["eps"]

[[example]]
name = "encode_pic"
required-features = ["pic"]

[[example]]
name = "encode_html"
required-features = ["html"]

[[example]]
name = "custom_colors"
required-features = ["image"]

[[example]]
name = "plugin_plain_text"

[[example]]
name = "const_version"

[[example]]
name = "cmyk_print"
required-features = ["eps", "pdf"]

[[example]]
name = "cli_tool"
required-features = ["cli"]

[[example]]
name = "accessible_svg"
required-features = ["svg"]

[[example]]
name = "batch_template"
required-features = ["image"]

[[example]]
name = "parse_wifi"

[[example]]
name = "parse_vcard"

[[example]]
name = "parse_gs1"

[[example]]
name = "structured_append"

[[example]]
name = "decode_roundtrip"
required-features = ["decode-rqrr"]

[[example]]
name = "async_render"
required-features = ["async"]

[[bench]]
name = "encoding"
harness = false

[[bench]]
name = "rendering"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
