[package]
name = "qrcode-compat"
description = "1.x compatibility facade for qrcode-rs 2.0 migrations."
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
authors = ["houseme <housemecn@gmail.com>"]
repository = "https://github.com/houseme/qrcode-rs"
keywords = ["qrcode", "compatibility", "migration"]
categories = ["encoding", "multimedia::images"]

[dependencies]
qrcode-rs = { path = "../..", version = "1.6.0", default-features = false, features = ["compat-1x"] }

[features]
default = ["std", "image", "svg", "pic", "eps", "html", "pdf"]
std = ["qrcode-rs/std"]
image = ["qrcode-rs/image"]
svg = ["qrcode-rs/svg"]
pic = ["qrcode-rs/pic"]
eps = ["qrcode-rs/eps"]
html = ["qrcode-rs/html"]
pdf = ["qrcode-rs/pdf"]
serde = ["qrcode-rs/serde"]
log = ["qrcode-rs/log"]
async = ["qrcode-rs/async"]
cli = ["qrcode-rs/cli"]
decode-rqrr = ["qrcode-rs/decode-rqrr"]
