[package]
name = "qrcode-compat"
description = "1.x compatibility facade for qrcode-rs 2.0 migrations."
license = "MIT OR Apache-2.0"
version = "2.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["houseme <housemecn@gmail.com>"]
repository = "https://github.com/houseme/qrcode-rs"
keywords = ["qrcode", "compatibility", "migration"]
categories = ["encoding", "multimedia::images"]
readme = "README.md"
# Keep this workspace-local. The published migration path is the qrcode-rs
# facade with the compat-1x feature enabled.
publish = false

[dependencies]
qrcode-rs = { path = "../..", version = "2.0.0", default-features = false, features = ["compat-1x"] }

[features]
default = ["std", "image", "svg", "pic", "eps", "html", "pdf"]
std = ["qrcode-rs/std"]
image = ["qrcode-rs/image"]
svg = ["qrcode-rs/svg"]
pic = ["qrcode-rs/pic"]
eps = ["qrcode-rs/eps"]
html = ["qrcode-rs/html"]
pdf = ["qrcode-rs/pdf"]
serde = ["qrcode-rs/serde"]
log = ["qrcode-rs/log"]
async = ["qrcode-rs/async"]
cli = ["qrcode-rs/cli"]
decode-rqrr = ["qrcode-rs/decode-rqrr"]
