[package]
name = "qrcode-core"
description = "Zero-dependency QR code encoding core (no_std + alloc) — the encoding primitive layer of qrcode-rs."
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
authors = ["houseme <housemecn@gmail.com>"]
repository = "https://github.com/houseme/qrcode-rs"
keywords = ["qrcode", "encoder", "no-std", "core"]
categories = ["encoding", "no-std"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }

[features]
# No defaults: the `qrcode-rs` facade enables `std`/`serde` as needed.
default = []
# Links the `std` crate. Disable for `no_std` + `alloc`.
std = []
# Enables serde Serialize/Deserialize on the core types.
serde = ["dep:serde"]
