[package]
name = "qrcode-core"
description = "Zero-dependency QR code encoding core (no_std + alloc) — the encoding primitive layer of qrcode-rs."
license = "MIT OR Apache-2.0"
version = "2.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["houseme <housemecn@gmail.com>"]
repository = "https://github.com/houseme/qrcode-rs"
keywords = ["qrcode", "encoder", "no-std", "core"]
categories = ["encoding", "no-std"]
readme = "README.md"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }

[features]
# No defaults: the `qrcode-rs` facade enables `std`/`serde` as needed.
default = []
# Links the `std` crate. Disable for `no_std` + `alloc`.
std = []
# Enables serde Serialize/Deserialize on the core types.
serde = ["dep:serde"]
# Exposes hidden benchmark-only hooks for comparing scalar and accelerated
# internals without duplicating scoring logic in Criterion benches.
bench-internals = []
