[package]
name = "qrcode-decode"
description = "QR code decoding traits, grayscale views, Structured Append parsing, and optional rqrr adapter for qrcode-rs."
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
authors = ["houseme <housemecn@gmail.com>"]
repository = "https://github.com/houseme/qrcode-rs"
keywords = ["qrcode", "decoder", "rqrr", "structured-append"]
categories = ["encoding", "multimedia::images", "no-std"]

[dependencies]
image = { version = "0.25.10", default-features = false, optional = true }
qrcode-core = { path = "../qrcode-core", version = "0.1.0", default-features = false }
rqrr = { version = "0.10", default-features = false, optional = true }

[features]
default = []
# Links the `std` crate. Disable for `no_std` + `alloc`.
std = ["qrcode-core/std"]
# Enables `GrayPixels::from(&image::GrayImage)`.
image = ["dep:image"]
# Enables the `rqrr`-backed decoder adapter.
rqrr = ["dep:rqrr"]
