[package]
name = "qrcode-pdf"
description = "Pure Rust PDF rendering backend for qrcode-rs."
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["houseme <housemecn@gmail.com>"]
repository = "https://github.com/houseme/qrcode-rs"
keywords = ["qrcode", "pdf", "renderer", "no-std"]
categories = ["encoding", "multimedia::images", "no-std"]

[dependencies]
qrcode-core = { path = "../qrcode-core", version = "0.1.0", default-features = false }
qrcode-render = { path = "../qrcode-render", version = "0.1.0", default-features = false }

[features]
default = []
# Links the `std` crate. Disable for `no_std` + `alloc`.
std = ["qrcode-core/std", "qrcode-render/std"]
