[package]
name = "qrcode-pic"
description = "Pure Rust PIC/troff rendering backend for qrcode-rs."
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
authors = ["houseme <housemecn@gmail.com>"]
repository = "https://github.com/houseme/qrcode-rs"
keywords = ["qrcode", "pic", "renderer", "troff", "no-std"]
categories = ["encoding", "multimedia::images", "no-std"]

[dependencies]
qrcode-core = { path = "../qrcode-core", version = "0.1.0", default-features = false }
qrcode-render = { path = "../qrcode-render", version = "0.1.0", default-features = false }

[features]
default = []
# Links the `std` crate. Disable for `no_std` + `alloc`.
std = ["qrcode-core/std", "qrcode-render/std"]
