[package]
name = "qrcode-svg"
description = "Pure Rust SVG rendering backend and SVG post-processing helpers for qrcode-rs."
license = "MIT OR Apache-2.0"
version = "2.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["houseme <housemecn@gmail.com>"]
repository = "https://github.com/houseme/qrcode-rs"
keywords = ["qrcode", "svg", "renderer", "no-std"]
categories = ["encoding", "multimedia::images", "no-std"]
readme = "README.md"

[dependencies]
qrcode-core = { path = "../qrcode-core", version = "2.0.0", default-features = false }
qrcode-render = { path = "../qrcode-render", version = "2.0.0", default-features = false }

[features]
default = []
# Links the `std` crate. Disable for `no_std` + `alloc`.
std = ["qrcode-core/std", "qrcode-render/std"]
